# computer-algebraic-system-in-c

./: CMakeLists.txt  README.md  example.md  setup.sh  test.sh  todo.md
.cache/clangd/index/: evaluator.c.B1DEC2DA73184A70.idx  evaluator.h.4CF74E3627EC4D6C.idx  main.c.F7D734C435F2BE69.idx  math_functions.h.4B4113C1AE7741EC.idx  math_operators.h.5F09D8EC3F6B1107.idx  parser.c.22E98DC56D38E0DF.idx  parser.h.D9C0246AD642CA98.idx  simplifier.c.742947FA9941903E.idx  simplifier.h.E7C8EB7B6B854C7B.idx  testing.c.2A237FC7DE037034.idx  tokenizer.c.D9250898BC2B179C.idx  tokenizer.h.840A802B4678CCB1.idx  vector.c.A092EC90DA46E2D8.idx  vector.h.B375060BD63C5DAD.idx
include/: ast_tree.h  evaluator.h  hash_table.h  infix.h  lexer.h  math_equation.h  math_functions.h  math_operators.h  parser.h  postfix.h  rules.h  simplifier.h  tokenizer.h  vector.h
src/: evaluator.c  hash_table.c  main.c  simplifier.c  testing.c  tokenizer.c  vector.c
src/ast_tree/: ast_tree.c  helper.c  postfix_to_ast_tree.c  printing.c  sort_node.c
src/ast_tree/simplify/: addition_into_multiplication.c  addition_with_fractions.c  addition_with_same_multiplicator.c  concat_operators.c  concated_power_into_multiplicated_power.c  conditional_expand_power.c  constant_folder.c  division_by_1.c  double_unary_simplified.c  expand_multiplicated_power.c  expand_multiplication.c  fractions_simplify_by_gcd.c  multiplication_by_1.c  multiplication_into_power.c  negated_addition_expansion.c  power_identities.c  subtract_into_negated_addition.c
src/converter/: infix_to_postfix.c  lexed_to_infix.c  lexer.c  parser.c  tokenizer.c
src/infix-postfix/: infix_to_postfix.c  lexed_to_infix.c  lexer.c
src/math_equation/: math_equation.c
src/rules/: math_variable_map.c  rules.c
src/simplifyer/: node_to_string.c  simplifier.c  simplify_add.c  simplify_multiply.c  simplify_sub.c
src/tests/: better_simplificiation_tests.c  infix.c  postfix.c  simplficiation_tests.h  simplification.c  test_rules.c  tests.h
src/vector/: vector.c
